--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "godspeed-downloader"
-version = "0.1.0"
+version = "2.1.1"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -26,6 +26,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 
 # Engine Update Dependencies
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
 zip = "0.6"
+tokio = { version = "1", features = ["rt-multi-thread"] }
 
