--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,8 +25,10 @@ serde_json = "1"
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 
-# Engine Update Dependencies
-reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
-zip = "0.6"
-tokio = { version = "1", features = ["rt-multi-thread"] }
+# Error Handling
+thiserror = "1"
 
+# Engine Update Dependencies
+reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
+zip = "0.6"
+tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
